<?xml version="1.0"?>
<package format="2">
  <name>throttle</name>
  <version>0.0.0</version>
  <description>The throttle package</description>

  <maintainer email="kurbakov.d@gmail.com">kurbakov</maintainer>
  <maintainer email="michal.slonina@gmail.com">michalslonina</maintainer>

  <license>MIT</license>

  <author email="kurbakov.d@gmail.com">kurbakov</author>
  <author email="michal.slonina@gmail.com">michalslonina</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>rospy</build_depend>
  <build_export_depend>dynamic_reconfigure</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>dynamic_reconfigure</exec_depend>
  <exec_depend>rospy</exec_depend>

  <export></export>
</package>
